# Zener_T2AC_MCU

./: .gitignore  CMakeLists.txt  partitions.csv
components/BLE/: bleFunction.c  bleFunction.h
components/NVS/: FetchNVSdata.c  FetchNVSdata.h  SaveNVSdata.c  SaveNVSdata.h
components/Services/: services.c  services.h
components/WiFi/: WiFi.c  comm_with_BLE.c  mqtt.h  wifi_conn_scan.c  wifi_init.c  wifi_task.c  wifi_task.h  wifi_utils.c
components/canLib/: canFunction.c  canFunction.h
main/: CMakeLists.txt  main.c  main.h
